Fix search container z-index

--- a/src/components/search/searchAbsoluteContainer.css
+++ b/src/components/search/searchAbsoluteContainer.css
@@ -8,6 +8,6 @@
     border-radius: 8px;
     box-shadow: 0 6px 12px 0 rgba(28, 7, 19, 0.1), 0 0 1px 0 rgba(28, 7, 19, 0.2);
     background-color: var(--white);
-    z-index: 1;
+    z-index: 3;
     overflow: hidden;
 }
